Introduce protobuf (#167)
* First end-to-end working version that produces messages to a topic

* Improve two-way Protobuf schema mapping

* Reworked enums to include index per symbol
* Reworked unions to include name and index for their respective value types
* Improved Protobuf to DataSchema mapping and vice versa
* Checked mapping using Apicurio's compatibility checker

* Improved protobuf schema translation

* Using Apicurio's FileElement, MessageElement etc as primary data classes to convert to/from DataSchema
* Manual translation from FileElement etc to FileDescriptor due to a type translation bug encountered in Apicurio

* Small updates and license additions

* Remodel enum internal type from Maps back to Lists

* Remove unused class

* Updated conversions and tested end-to-end flow

* Updated conversion between Descriptors and FileElements
* Updated conversion between FileElements and DataSchema
* Implemented conversion in DataObjectMapper to allow consuming messages

* Added protobuf data generation and inspection example

* Updated examples for byte array generation

* Improve examples for byte array generation and manipulation

* Improve byte generation return type

* Small core updates to better facilitate Protobuf and schema mechanics in general

* Made ProtobufDataObjectMapper inherit from NativeDataObjectMapper to support recursive type mapping
* Improved Protobuf schema mapping
* Moved schema code around to check compatibility in right classes
* Added number conversions to DataObjectConverter
* Introduced toString() output in DataField for easier debugging

* fix: pom.xml to reduce vulnerabilities

The following vulnerabilities are fixed with an upgrade:
- https://snyk.io/vuln/SNYK-JAVA-ORGAPACHEKAFKA-8528112

* fix: pom.xml to reduce vulnerabilities

The following vulnerabilities are fixed with an upgrade:
- https://snyk.io/vuln/SNYK-JAVA-CHQOSLOGBACK-8539866
- https://snyk.io/vuln/SNYK-JAVA-CHQOSLOGBACK-8539867
- https://snyk.io/vuln/SNYK-JAVA-CHQO